atualização do gradle, menu nav criado

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -78,6 +78,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:backgroundTint="@color/cor_logo"
+        android:onClick="MenuPricipal"
         android:text="Entrar"
         android:textColor="#FFF9F9"
         android:textSize="16sp"
