--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,19 +3,22 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
+    android:label="@string/app_name"
     app:startDestination="@+id/navigation_home">
 
     <fragment
         android:id="@+id/navigation_home"
         android:name="com.ifpe.criptoscan.ui.home.HomeFragment"
+        tools:layout="@layout/fragment_home"
         android:label="@string/title_home"
-        tools:layout="@layout/fragment_home" />
+        />
 
     <fragment
         android:id="@+id/navigation_dashboard"
         android:name="com.ifpe.criptoscan.ui.dashboard.DashboardFragment"
-        android:label="@string/title_dashboard"
-        tools:layout="@layout/fragment_dashboard" />
+        tools:layout="@layout/fragment_dashboard"
+        android:label="@string/title_alert"
+        />
 
     <fragment
         android:id="@+id/navigation_notifications"
