Adição de comunicação com banco e telas

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -78,7 +78,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:backgroundTint="@color/cor_logo"
-        android:onClick="MenuPricipal"
+        android:onClick="buttonSignInClick"
         android:text="Entrar"
         android:textColor="#FFF9F9"
         android:textSize="16sp"
@@ -96,6 +96,7 @@
         android:textAlignment="center"
         android:textColor="#2196F3"
         android:textSize="10sp"
+        android:onClick="Cadastrar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
