--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -25,4 +25,12 @@
         android:name="com.ifpe.criptoscan.ui.notifications.NotificationsFragment"
         android:label="@string/title_notifications"
         tools:layout="@layout/fragment_notifications" />
+
+    <fragment
+        android:id="@+id/navigation_profile"
+        android:name="com.ifpe.criptoscan.ui.user.UserFragment"
+        android:label="Perfil"
+        tools:layout="@layout/fragment_profile" />
+
+
 </navigation>
