concerto bug login

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -152,6 +152,8 @@
                     android:id="@+id/textView7"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:autoSizeTextType="none"
+                    android:ellipsize="none"
                     android:text="Top 5 Criptomoedas Populares"
                     android:textSize="20sp"
                     android:textStyle="bold" />
